feat: add release types

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "type.d.ts"
   ],
   "peerDependencies": {
     "vite": "^2.9.0 || ^3.0.0"
