fix:  try to parse again removing the comma

--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/debug": "^4.1.12",
     "@types/estree": "^1.0.5",
     "acorn": "^8.11.3",
     "acorn-walk": "^8.3.2",
+    "debug": "^4.3.4",
     "magic-string": "^0.30.8"
   }
 }
