--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-import-glob-default",
   "version": "0.0.1-beta.2",
-  "packageManager": "pnpm@7.9.0",
+  "packageManager": "pnpm@7.33.7",
   "description": "> description:",
   "publishConfig": {
     "access": "public"
@@ -40,7 +40,7 @@
     "type.d.ts"
   ],
   "peerDependencies": {
-    "vite": "^2.9.0 || ^3.0.0"
+    "vite": ">=2.9.0"
   },
   "scripts": {
     "dev": "tsup --watch",
@@ -54,25 +54,25 @@
     "prettier:all": "prettier -w ."
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
+    "@types/debug": "^4.1.12",
+    "@types/estree": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "bumpp": "^8.2.1",
-    "eslint": "^8.22.0",
-    "eslint-config-alloy": "^4.6.2",
-    "prettier": "^2.7.1",
-    "tsup": "^6.2.2",
-    "tsx": "^3.8.2",
-    "typescript": "^4.7.4",
+    "eslint": "^8.57.0",
+    "eslint-config-alloy": "^4.9.0",
+    "prettier": "^2.8.8",
+    "tsup": "^6.7.0",
+    "tsx": "^3.14.0",
+    "typescript": "^4.9.5",
     "vitest": "^0.22.1",
     "zwkang-prettier-config": "^0.0.3"
   },
   "license": "MIT",
   "dependencies": {
-    "@types/debug": "^4.1.12",
-    "@types/estree": "^1.0.5",
     "acorn": "^8.11.3",
     "acorn-walk": "^8.3.2",
     "debug": "^4.3.4",
-    "magic-string": "^0.30.8"
+    "magic-string": "^0.30.10"
   }
 }
