--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zwkang/vite-plugin-import-glob-default"
+    "url": "git+https://github.com/zwkang/vite-plugin-import-glob-default.git"
   },
   "bugs": "https://github.com/zwkang/vite-plugin-import-glob-default/issues",
   "keywords": [],
